# AMTalyze

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: basic_tester.ipynb
src/amtalyze/: __init__.py  core.py
